src/components/header/Header.css
.Header {
  --fs-logo: 18px;

  font-weight: var(--fw-500);

  background-color: var(--clr-white);
  box-shadow: var(--shadow);
  transition: height var(--transition);
}

@media screen and (min-width: 40.625em) {
  .Header {
    --fs-logo: 24px;
  }
}

.Header__container {
  max-width: 1440px;
  height: 99px;
  margin-inline: auto;
  padding-inline: var(--spacing-inline);

  display: flex;
  align-items: center;
  justify-content: space-between;
}

@media screen and (min-width: 46.875em) {
  .Header__container {
    height: 80px;
  }
}

.Header__logo {
  font-size: var(--fs-logo);
  letter-spacing: 0.01em;
  transition: font-size var(--transition);
}

.Header__controls {
  display: flex;
  align-items: center;
  gap: 10px;
}

.Header__controls p {
  display: none;
}

@media screen and (min-width: 29.0625em) {
  .Header__controls p {
    display: block;
    font-size: 16px;
  }
}

.Header__toggle {
  --size: 20px;

  width: var(--size);
  height: var(--size);

  background-size: contain;
  background-position: center center;
  background-color: transparent;
  border: none;

  aspect-ratio: 1 / 1;
  cursor: pointer;
  transition: transform 0.5s cubic-bezier(0.38, -0.47, 0.58, 1);
}

.Header__toggle[role="switch"][aria-checked="false"] {
  background-image: url("./../../assets/moon-outline.svg");
}

.Header__toggle[role="switch"][aria-checked="true"] {
  background-image: url("./../../assets/moon.svg");
  background-color: black;

  transform: rotate(360deg);
}

